Standardize contact email to kucscbo1@gmail.com

--- a/events.html
+++ b/events.html
@@ -254,8 +254,8 @@
       <div class="col-md-6 mb-4">
         <div class="card event-card h-100">
           <div class="position-relative">
-            <img src="gbv.jpeg" class="event-img" alt="GBV Awareness">
-            <div class="event-date">SEPT 2025</div>
+            <img src="GENEDR.jpg" class="event-img" alt="GBV Awareness">
+            <div class="event-date">DEC 2025</div>
           </div>
           <div class="card-body">
             <span class="event-badge gbv-badge">GBV Awareness</span>
@@ -271,7 +271,7 @@
       <div class="col-md-6 mb-4">
         <div class="card event-card h-100">
           <div class="position-relative">
-            <img src="gbv.jpeg" class="event-img" alt="Western Tour on GBV">
+            <img src="tour.jpg" class="event-img" alt="Western Tour on GBV">
             <div class="event-date">OCT-NOV 2025</div>
           </div>
           <div class="card-body">
