--- a/gallery.html
+++ b/gallery.html
@@ -393,8 +393,8 @@
       
       <!-- Tree Planting -->
       <div class="col-md-4 col-sm-6 gallery-item" data-category="tree-planting">
-        <a href="img/gallery/tree-planting.jpg" data-lightbox="gallery" data-title="Environmental Conservation Initiative">
-          <img src="img/gallery/tree-planting.jpg" alt="Tree Planting">
+        <a href="tour.jpg" data-lightbox="gallery" data-title="Environmental Conservation Initiative">
+          <img src="tour.jpg" alt="tour">
           <div class="gallery-caption">
             <h5>Tree Planting Initiative</h5>
             <p>January 5, 2024</p>
@@ -404,8 +404,8 @@
       
       <!-- Community Service -->
       <div class="col-md-4 col-sm-6 gallery-item" data-category="community">
-        <a href="img/gallery/community-cleanup.jpg" data-lightbox="gallery" data-title="Kakamega Town Cleanup">
-          <img src="img/gallery/community-cleanup.jpg" alt="Town Cleanup">
+        <a href="GENEDR.jpg" data-lightbox="gallery" data-title="Kakamega Town Cleanup">
+          <img src="GENEDR.jpg">
           <div class="gallery-caption">
             <h5>Kakamega Town Cleanup</h5>
             <p>November 15, 2023</p>
