--- a/index.html
+++ b/index.html
@@ -301,11 +301,11 @@
       <!-- GBV Summit -->
       <div class="col-md-4 mb-4">
         <div class="card h-100 shadow-sm">
-          <img src="gbv.jpeg" class="card-img-top" alt="GBV Summit">
+          <img src="GENEDR.jpg" class="card-img-top" alt="GBV Summit">
           <div class="card-body">
             <div class="d-flex justify-content-between mb-2">
               <span class="news-badge gbv-badge">GBV Awareness</span>
-              <small class="text-muted">August 2025</small>
+              <small class="text-muted">December 2025</small>
             </div>
             <h5 class="card-title">GBV Summit at MMUST</h5>
             <p class="card-text">Join us for an important discussion on gender-based violence and teenage pregnancy prevention at Masinde Muliro University.</p>
@@ -333,11 +333,11 @@
       <!-- Western Tour -->
       <div class="col-md-4 mb-4">
         <div class="card h-100 shadow-sm">
-          <img src="gbv.jpeg" class="card-img-top" alt="Western Tour">
+          <img src="tour.jpg" class="card-img-top" alt="Western Tour">
           <div class="card-body">
             <div class="d-flex justify-content-between mb-2">
               <span class="news-badge gbv-badge">GBV Campaign</span>
-              <small class="text-muted">August 2025</small>
+              <small class="text-muted">December 2025</small>
             </div>
             <h5 class="card-title">Western Kenya GBV Tour</h5>
             <p class="card-text">Multi-county tour addressing gender-based violence across Western Kenya institutions.</p>
@@ -580,8 +580,8 @@
           <h5>Contact Us</h5>
           <ul class="list-unstyled">
             <li><i class="fas fa-map-marker-alt me-2"></i> Kakamega Town, Kenya</li>
-            <li><i class="fas fa-phone me-2"></i> +254 700 000000</li>
-            <li><i class="fas fa-envelope me-2"></i> info@kucsa.org</li>
+            <li><i class="fas fa-phone me-2"></i> +254112473354</li>
+            <li><i class="fas fa-envelope me-2"></i> Email: kucscbo1@gmail.com</li>
           </ul>
           <div class="mt-3">
             <a href="https://www.facebook.com/profile.php?id=61551987487506&mibextid=ZbWKwL" class="social-icon"><i class="fab fa-facebook-f"></i></a>
