--- a/leadership.html
+++ b/leadership.html
@@ -325,7 +325,7 @@
           <!-- Publicity Secretary -->
           <div class="col-md-4 col-lg-3">
             <div class="leader-card shadow-sm">
-              <img src="Publicity.jpeg" alt="KUCSA Publicity Secretary Enock Soita" class="leader-img">
+              <img src="pub.jpeg" alt="KUCSA Publicity Secretary Enock Soita" class="leader-img">
               <div class="position-badge">Publicity Secretary</div>
               <h4>Enock Soita</h4>
               <p class="text-muted">University of Eldoret</p>
