--- a/membership.html
+++ b/membership.html
@@ -402,8 +402,8 @@
         <div class="col-md-4 text-center text-md-end">
           <h5>Contact Information</h5>
           <p>Kakamega Town, Kenya</p>
-          <p>Email: membership@kucsa.org</p>
-          <p>Phone: +254 712 345 678</p>
+          <p>Email: kucscbo1@gmail.com</p>
+          <p>Phone: +254112473354</p>
           <p>Office Hours: Mon-Fri, 9am-5pm</p>
         </div>
       </div>
