--- a/news.html
+++ b/news.html
@@ -157,7 +157,7 @@
       <!-- Western Tour Planning -->
       <div class="col-lg-6 mb-4">
         <div class="card news-card shadow-sm h-100">
-          <img src="gbv.jpeg" class="card-img-top" alt="Western Tour Planning">
+          <img src="tour.jpg" class="card-img-top" alt="Western Tour Planning">
           <div class="card-body">
             <span class="news-badge gbv-badge">GBV Campaign</span>
             <span class="news-date">Posted on June 10, 2025</span>
