--- a/contacts.html
+++ b/contacts.html
@@ -211,8 +211,8 @@
             <i class="fas fa-envelope"></i>
             <h5>Email Addresses</h5>
             <p>
-              General: <a href="mailto:kucscbo1@gmail.com">kucscbo1@gmail.com</a><br>
-              Support: <a href="mailto:kucscbo1@gmail.com">kucscbo1@gmail.com</a>
+              General: <a href="mailto:kucscbo1@gmail.com">Email: kucscbo1@gmail.com</a><br>
+              Support: <a href="mailto:kucscbo1@gmail.com">Email: kucscbo1@gmail.com</a>
             </p>
           </div>
           
@@ -242,7 +242,7 @@
       <div class="col-lg-7">
         <div class="contact-form text-center">
           <h3 class="mb-4">Send Us a Message</h3>
-          <a href="mailto:kucscbo1@gmail.com" class="btn btn-success btn-lg">
+          <a href="mailto:kucscbo1@gmail.com" class="btn btn-success btn-lg">Email: kucscbo1@gmail.com</a>
             <i class="fas fa-paper-plane me-2"></i>Send Email to KUCSA
           </a>
         </div>
@@ -262,7 +262,7 @@
             <h5>President</h5>
             <p class="text-muted">Joseph Ezekiel</p>
             <p><i class="fas fa-phone me-2"></i> <a href="tel:+254112473354">+254112473354</a></p>
-            <p><i class="fas fa-envelope me-2"></i> <a href="mailto:josephezekiel855@gmail.com">josephezekiel855@gmail.com</a></p>
+            <p><i class="fas fa-envelope me-2"></i> <a href="mailto:kucscbo1@gmail.com">Email: kucscbo1@gmail.com</a></p>
           </div>
         </div>
       </div>
