Update card title for GBV Summit

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
               <span class="news-badge gbv-badge">GBV Awareness</span>
               <small class="text-muted">December 2025</small>
             </div>
-            <h5 class="card-title">GBV Summit at MMUST</h5>
+            <h5 class="card-title">GBV Summit</h5>
             <p class="card-text">Join us for an important discussion on gender-based violence and teenage pregnancy prevention at Masinde Muliro University.</p>
             <a href="news.html" class="btn btn-sm btn-danger">Read More</a>
           </div>
