Update membership registration link

--- a/membership.html
+++ b/membership.html
@@ -232,7 +232,7 @@
     <h2 class="section-title text-center">Membership Registration</h2>
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8LJl0Ho5rlEZHEJao5wKjlkAk7OihUOTriiNFJqEfbnC2lQ/viewform?usp=header" target="_blank" class="btn btn-success btn-lg">
+        <a href="https://forms.gle/WEVznJpA5xm3wzXM7" target="_blank" class="btn btn-success btn-lg">
           <i class="fas fa-user-plus me-2"></i>Join KUCSA Now
         </a>
         <div class="mt-3">
